SERVER-85156 Change stream oplog filter should not assume that op 'c' events are always on the $cmd namespace (#18057)

(cherry picked from commit ff9491c9e3e8db184fd33eea7bf4b9bc88f21f0c)

GitOrigin-RevId: 70354cb120620e2bc5eb4a5ded7212ea6778518a