src/mongo/db/pipeline/document_source_change_stream_oplog_match.cpp
@@ -150,7 +150,9 @@ BSONObj buildMatchFilter(const boost::intrusive_ptr<ExpressionContext>& expCtx,
         BSON("ns" << BSONRegEx(DocumentSourceChangeStream::getNsRegexForChangeStream(nss)));
 
     // 2.1) Normal CRUD ops.
-    auto normalOpTypeMatch = BSON("op" << NE << "n");
+    auto normalOpTypeMatch = BSON("op" << BSON("$in" << BSON_ARRAY("i"
+                                                                   << "u"
+                                                                   << "d")));
 
     // TODO SERVER-44039: we continue to generate 'kNewShardDetected' events for compatibility
     // with 4.2, even though we no longer rely on them to detect new shards. We may wish to remove
